# pyitc

./: .gitignore  .gitmodules  .python-version  README.md  codecov.yml  ffi_generator.py  meson.build  noxfile.py  pyproject.toml
.github/: release.yaml
.github/workflows/: build-and-run-tests.yml  release.yml
pyitc/: __init__.py  exceptions.py  extended_api.py  id.py  pyitc.py
pyitc/_internals/: __init__.py  _wrappers.py  wrappers.py
src/pyitc/: __init__.py  exceptions.py  extended_api.py  pyitc.py  util.py
src/pyitc/_internals/: __init__.py  wrappers.py
tests/: exceptions_test.py  extended_api_test.py  stamp_test.py  wrapper_test.py
