[project]
name = "pyitc"
version = "0.1.0"
description = "Python bindings for the libitc library"
readme = 'README.md'
license = {file = 'LICENSE'}
urls.repository = "https://github.com/sdimovv/pyitc"
requires-python = '>=3.7'
dependencies = [
  "cffi>=1.15.1; python_version<'3.8'",
  "cffi>=1.16; python_version>='3.8'",
]
optional-dependencies.test = [
  "pytest",
  "pytest-cov",
]
optional-dependencies.qa = [
  "ruff",
  "mypy",
]

[tool.isort]
profile = "black"
known_first_party = ["pyitc"]

[tool.flake8]
copyright-check = true
max-line-length = 80
max-complexity = 12
extend-select = [
  "B950",
  "DOC",
  "C",
]
extend-ignore = [
  "E203",
  "E501",
  "E701",
  "ANN101",
  "ANN102",
]

[tool.meson-python.args]
# setup = []
# compile = []
install = ['--skip-subprojects']
dist = ['--include-subprojects']

[build-system]
requires = [
  "meson-python>=0.16.0",
  'meson>=1.4.0',
  'ninja',
  "cffi>=1.15.1; python_version<'3.8'",
  "cffi>=1.16; python_version>='3.8'",
  "setuptools; python_version>='3.12'",
]
build-backend = 'mesonpy'
