[project]
name = "pyitc"
version = "0.1.0"
description = "Python bindings for the libitc library"
readme = 'README.md'
license = {file = 'LICENSE'}
urls.repository = "https://github.com/sdimovv/pyitc"
requires-python = '>=3.7'
dependencies = [
  "cffi>=1.15.1; python_version<'3.8'",
  "cffi>=1.16; python_version>='3.8'",
  "typing-extensions; python_version<'3.11'",
]
optional-dependencies.test = [
  "pytest",
  "pytest-cov",
]
optional-dependencies.qa = [
  "ruff",
  "mypy",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["E501", "D211", "D203", "D213", "ISC001", "COM812"]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.meson-python.args]
# setup = []
# compile = []
install = ['--skip-subprojects']
dist = ['--include-subprojects']

[build-system]
requires = [
  "meson-python>=0.16.0",
  'meson>=1.4.0',
  'ninja',
  "cffi>=1.15.1; python_version<'3.8'",
  "cffi>=1.16; python_version>='3.8'",
  "setuptools; python_version>='3.12'",
]
build-backend = 'mesonpy'
